# gitmirrors

./: .env.example  .env.production  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: ci.yml
helper-scripts/: clear_runtime_files.sh
server/: Cargo.toml  Dockerfile  Dockerfile.dev  Rocket.toml  entrypoint.dev.sh  entrypoint.sh
server/migrations/20250625191552_users/: up.sql
server/migrations/20250722175542_repositories/: up.sql
server/migrations/20250725142954_repository_logs/: down.sql  up.sql
server/src/: main.rs  models.rs  schema.rs
server/src/clone/: worker.rs
server/src/db/: mod.rs
server/src/middlewares/: auth.rs
server/src/routes/: aggregate.rs  mod.rs  repository.rs  user.rs
server/src/utils/: catchers.rs  crypto.rs  mod.rs  response.rs
web-client/: Dockerfile  Dockerfile.dev  error.vue  nuxt.config.ts  package.json
web-client/api/: aggregate.api.ts  auth.api.ts  repository.api.ts  user.api.ts
web-client/assets/scss/: main.scss
web-client/components/Account/: ChangePasswordForm.vue
web-client/components/Auth/: SignInContainer.vue
web-client/composables/: useApi.ts
web-client/factories/: api.factory.ts
web-client/layouts/: auth.vue  default.vue
web-client/middleware/: dashboard.global.ts
web-client/pages/: index.vue
web-client/plugins/: init.server.ts  toast.client.ts
web-client/store/: auth.store.ts  index.ts  repository.store.ts  ui.store.ts  user.store.ts
web-client/types/: dashboard.ts  repository.ts  repositoryLog.ts
web-client/utils/: validateSSHPrivateKey.ts
(+25 files in other folders)
