[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
diesel = { version = "2.2.0", features = [
  "postgres",
  "r2d2",
  "chrono",
  "uuid",
] }
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
rand = "0.9.1"
async-trait = "0.1.88"
argon2 = "0.5.3"
base64 = "0.22.1"
validator = { version = "0.20.0", features = ["derive"] }
